--- a/raspberry_scripts/config.yml
+++ b/raspberry_scripts/config.yml
@@ -1,12 +1,12 @@
 firebaseUrl: 'https://intelligent-house-test.firebaseio.com/'
-serviceKeyFile: '../service-key.json'
+serviceKeyFile: '/home/pi/intelligent-house/service-key.json'
 delays:
-  temperature: 30
+  temperature: 300
 sensors:
   temperature:
     temp_room_1:
-      # path: /sys/bus/w1/devices/28-0117b34369ff/w1_slave
-      path: w1_slave
+      path: /sys/bus/w1/devices/28-0117b34369ff/w1_slave
+      # path: w1_slave
     temp_room_2:
-      # path: /sys/bus/w1/devices/28-0117b34369ff/w1_slave
-      path: w2_slave
+      path: /sys/bus/w1/devices/28-00000a33a888/w1_slave
+      # path: w2_slave
