--- a/functions/package.json
+++ b/functions/package.json
@@ -7,6 +7,7 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
+    "deploy-aws": "cd ../cron-service && serverless deploy",
     "logs": "firebase functions:log"
   },
   "main": "lib/index.js",
